Remove old sponsor logos, add hackathon x logos

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="content">
-		<img class="header-logo" src="/assets/images/hackathonx_logo.png" alt="hackathon x Logo">
+		<img class="header-logo" src="/assets/images/logos/hackathon-x/SVG/BLM_museumx_LOGO_hackathon_weiss-rot.svg" alt="hackathon x Logo">
 	</div>
 	<div class="container">
 		<nav class="navbar">
