Update background on all pages (add red X)

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -63,6 +63,7 @@ layout: compress
 		body {
 			background-image: url('{{ page.bg_url }}');
 			background-position: {{ page.bg_position }};
+            background-size: {{page.bg_size}};
 		}
 	{% endif %}
 	</style>
