Update BLM logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 				<img src="/assets/images/hs_logo_white.png" alt="Hack und Soehne Logo" style="max-width: 90px;">
 			</a>
             <a target="_blank" rel="noopener" href="https://www.landesmuseum.de/creative/museum-x">
-				<img src="/assets/images/logos/blm_museumx.svg" alt="Badisches Landesmuseum Logo" style="margin: 0 1em; background-color:white; max-width:190px">
+				<img src="/assets/images/logos/blm_museumx.svg" alt="Badisches Landesmuseum Logo" style="margin: 0 1em; max-width:190px">
 			</a>
 		</div>
 		<nav class="footer-links">
