--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,13 @@
 	<div class="container">
 		<div class="footer-logos">
 			<a target="_blank" rel="noopener" href="https://hackundsoehne.de/">
-				<img src="/assets/images/hs_logo_white.png" alt="Hack und Soehne Logo" style="max-width: 90px;">
+				<img src="/assets/images/hs_logo_white.png" alt="Hack und Soehne Logo" style="margin: 0 1em; max-width: 90px;">
 			</a>
             <a target="_blank" rel="noopener" href="https://www.landesmuseum.de/creative/museum-x">
 				<img src="/assets/images/logos/blm_museumx.svg" alt="Badisches Landesmuseum Logo" style="margin: 0 1em; max-width:190px">
+			</a>
+			<a target="_blank" rel="noopener" href="https://mwk.baden-wuerttemberg.de/de/startseite/">
+				<img src="/assets/images/logos/bw.png" alt="Ministerium für Wissenschaft, Forschung und Kunst Logo" style="max-width:200px">
 			</a>
 		</div>
 		<nav class="footer-links">
